--- a/Sunduk.PWA/Dialogs/FeedBackDialog.razor
+++ b/Sunduk.PWA/Dialogs/FeedBackDialog.razor
@@ -72,8 +72,8 @@
 
             try
             {
-                var tempName = WebUtility.UrlEncode(Name);
-                var tempMessage = WebUtility.UrlEncode(Message);
+                var tempName = WebUtility.UrlEncode(Encode(Name));
+                var tempMessage = WebUtility.UrlEncode(Encode(Message));
                 Status = await http.GetStringAsync($"https://sunduk-api.azurewebsites.net/sendmessage|{tempName}|{tempMessage}");
 
                 if (Status == "Ok")
@@ -94,14 +94,14 @@
         }
     }
 
-    //private static string Encode(string text)
-    //{
-    //    return text
-    //        .Replace(@" ", "__space__")
-    //        .Replace("/", "__slash__")
-    //        .Replace("\\", "__backslash__")
-    //        .Replace(".", "__dot__")
-    //        .Replace("|", "__pipeline__")
-    //        .Replace("@", "__at__");
-    //}
+    private static string Encode(string text)
+    {
+        return text
+            .Replace(@" ", "__space__")
+            .Replace("/", "__slash__")
+            .Replace("\\", "__backslash__")
+            .Replace(".", "__dot__")
+            .Replace("|", "__pipeline__")
+            .Replace("@", "__at__");
+    }
 }
