--- a/Sunduk.PWA/Dialogs/FeedBackDialog.razor
+++ b/Sunduk.PWA/Dialogs/FeedBackDialog.razor
@@ -102,6 +102,7 @@
             .Replace("\\", "__backslash__")
             .Replace(".", "__dot__")
             .Replace("|", "__pipeline__")
+            .Replace("+", "__plus__")
             .Replace("@", "__at__");
     }
 }
