пофиксил отправку через апи

--- a/Sunduk.PWA/Dialogs/FeedBackDialog.razor
+++ b/Sunduk.PWA/Dialogs/FeedBackDialog.razor
@@ -89,7 +89,7 @@
             catch (Exception ex)
             {
                 Status = ex.Message;
-                Snackbar.Add($"Не удалось отправить сообщение.{ex.GetType()}\n{Status}", Severity.Error);
+                Snackbar.Add($"Не удалось отправить сообщение.", Severity.Error);
             }
         }
     }
