--- a/Sunduk.PWA/Components/Stuff/NippleComponent.razor
+++ b/Sunduk.PWA/Components/Stuff/NippleComponent.razor
@@ -29,7 +29,7 @@
 
         <MudHidden Breakpoint="Breakpoint.Xs">
             <MudItem xs="12" sm="6" >
-            <MudCard Elevation="0" Outlined="true" Class="mt-1">
+            <MudCard Elevation="0" Outlined="true" Class="mt-1 rounded-0">
                 <MudCardContent>
                     @if (CurrentImage == Images.NippleBase)
                     {
@@ -122,8 +122,19 @@
         @if (NippleDiameter > 0 && RadiusSize > 0)
         {
             <MudItem xs="12">
-                <MudExpansionPanel Class="mt-2" Text="Пример программы для Fanuc">
-                    <MudItem xs="12">
+                <MudExpansionPanel Class="rounded-0" Text="Пример программы для Fanuc">
+                    <MudGrid Class="mb-1 pa-n3">
+                        <MudItem xs="6" md="4">
+                            <MudSwitch @bind-Checked="@RoundCorner" Label="Скруглить углы" Color="Color.Primary" Class="ma-n3"/>
+                        </MudItem>
+                        <MudItem xs="6" md="4">
+                            @if (RoundCorner)
+                            {
+                                <MudTextField @bind-Value="_NippleBlunt" T="string" Label="Радиус скругления" Variant="Variant.Text" Margin="Margin.Dense" Immediate="true" Adornment="Adornment.End" AdornmentText="мм"  Class="ma-n4" DisableUnderLine="true"/>
+                            }
+                        </MudItem>
+                    </MudGrid>
+                    <MudItem xs="12" Class="mt-1">
                         <MudTextField Variant="Variant.Outlined" Class="monofield" ReadOnly="true" Lines="ExampleLines" Value="@RadiusExample" />
                     </MudItem>
                 </MudExpansionPanel>
@@ -136,8 +147,10 @@
 
 @code 
 {
-    readonly int _imgHeigth = 190;
+    readonly int _imgHeigth = 147;
     readonly int _imgWidth = 250;
+
+    public bool RoundCorner { get; set; } = false;
 
     public enum Images
     {
@@ -156,8 +169,12 @@
         {
             if (NippleDiameter > 0 && RadiusSize > 0)
             {
+                if (RoundCorner)
+                {
+                    return GetBluntedShape();
+                }
                 return
-                    $"G0 X{StartDiamWithShift.NC()} Z1. S180 M3\n" +
+                    $"G0 X{StartDiamWithShift.NC()} Z1. S200 M3\n" +
                     $"G1 Z0. F0.1\n" +
                     $"G3 X{NippleDiameter.NC()} Z-{RadiusDepth.NC()} R{FullRadius.NC()}\n";
             }
@@ -179,6 +196,10 @@
     public string _InsertRadius { get; set; } = string.Empty;
     public double InsertRadius { get => Util.GetDouble(_InsertRadius); }
 
+    public string _NippleBlunt { get; set; } = "0.3";
+    public double NippleBlunt { get => Util.GetDouble(_NippleBlunt); }
+    public double NippleBluntRadius { get => NippleBlunt + InsertRadius; }
+
     public double NippelStartPointX { get => Math.Sqrt(Math.Pow(RadiusSize, 2) - Math.Pow(ArcCenter, 2)); }
     public double NippelStartDiameter { get => NippelStartPointX * 2; }
 
@@ -192,4 +213,18 @@
 
     public int ExampleLines { get => RadiusExample.Count(f => f == '\n') + 1; }
 
+    string GetBluntedShape()
+    {
+        var catet = ArcCenter - NippleBluntRadius;
+        var startX = Math.Sqrt(Math.Pow(FullRadius - NippleBluntRadius, 2) - Math.Pow(catet, 2));
+        var angle = Math.Atan(startX / catet).Degrees();
+        var endX = NippleBluntRadius * Math.Sin(angle.Radians()) + startX;
+        var endZ = NippleBluntRadius - (Math.Sqrt(Math.Pow(NippleBluntRadius, 2) - Math.Pow(NippleBluntRadius * Math.Sin(angle.Radians()), 2)));
+
+        return $"G0 X{(startX*2).NC()} Z1. S200 M3\n" +
+        $"G1 Z0. F0.1\n" +
+        $"G3 X{(endX*2).NC()} Z-{endZ.NC()} R{NippleBluntRadius.NC()}\n" +
+        $"X{NippleDiameter.NC()} Z-{RadiusDepth.NC()} R{FullRadius.NC()}\n" +
+        $"";
+    }
 }
